--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,13 @@
 name: Build and Deploy Documentation
 
-on:
+"on":
   push:
     branches: [ "master", "main" ]
   pull_request:
     branches: [ "master", "main" ]
     types: [opened, synchronize]
   # Allow manual trigger
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -56,9 +56,8 @@ jobs:
         
     - name: Sync version to Doxygen config
       run: |
-        # Get version from setuptools-scm and update Doxyfile
-        export PYHELIOS_DEV_MODE=1
-        VERSION=$(python -c "from pyhelios._version import __version__; print(__version__)")
+        # Get version directly from _version.py to avoid importing PyHelios
+        VERSION=$(python -c "import sys; sys.path.insert(0, 'pyhelios'); from _version import __version__; print(__version__)")
         echo "Updating Doxygen PROJECT_NUMBER to: $VERSION"
         sed -i "s/^PROJECT_NUMBER.*$/PROJECT_NUMBER         = $VERSION/" docs/Doxyfile.python
         
@@ -96,53 +95,3 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
-
-  # Job for PR documentation preview (build only, no deploy)
-  preview-docs:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    name: Preview Documentation (PR)
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
-        
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-        
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y doxygen graphviz
-        
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install doxypypy
-        pip install -r requirements.txt
-        pip install -e .
-        
-    - name: Sync version to Doxygen config (preview)
-      run: |
-        # Get version from setuptools-scm and update Doxyfile
-        export PYHELIOS_DEV_MODE=1
-        VERSION=$(python -c "from pyhelios._version import __version__; print(__version__)")
-        echo "Updating Doxygen PROJECT_NUMBER to: $VERSION"
-        sed -i "s/^PROJECT_NUMBER.*$/PROJECT_NUMBER         = $VERSION/" docs/Doxyfile.python
-        
-    - name: Build documentation (preview)
-      run: |
-        mkdir -p docs/generated
-        doxygen docs/Doxyfile.python
-        echo "✓ Documentation preview built successfully"
-        
-    - name: Upload preview artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: documentation-preview
-        path: docs/generated/html/
-        retention-days: 7
