--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,6 +31,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive  # Include helios-core submodule for doc assets
+        fetch-depth: 0  # Fetch full history including tags
         
     - name: Set up Python 3.11
       uses: actions/setup-python@v4
@@ -56,8 +57,13 @@ jobs:
         
     - name: Sync version to Doxygen config
       run: |
-        # Get version directly from _version.py to avoid importing PyHelios
-        VERSION=$(python -c "import sys; sys.path.insert(0, 'pyhelios'); from _version import __version__; print(__version__)")
+        # Get version from git tags (remove 'v' prefix if present)
+        VERSION=$(git describe --tags --abbrev=0 2>/dev/null | sed 's/^v//' || echo "unknown")
+        if [ "$VERSION" = "unknown" ]; then
+          echo "Warning: Could not determine version from git tags, using fallback"
+          # Fallback to setuptools-scm if available
+          VERSION=$(python -c "import setuptools_scm; print(setuptools_scm.get_version())" 2>/dev/null | sed 's/^v//' || echo "dev")
+        fi
         echo "Updating Doxygen PROJECT_NUMBER to: $VERSION"
         sed -i "s/^PROJECT_NUMBER.*$/PROJECT_NUMBER         = $VERSION/" docs/Doxyfile.python
         
