--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ build/
 *.egg-info/
 *.egg
 
+# Auto-generated version file (setuptools-scm)
+pyhelios/_version.py
+
 # IDEs and editors
 .vscode/
 .idea/
