--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ norecursedirs = helios-core .git .pytest_cache __pycache__ *.egg-info build dist
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
+addopts =
     -v
     --tb=short
     --strict-markers
@@ -18,6 +18,7 @@ markers =
     linux_only: Tests that require Linux platform
     cross_platform: Tests that work across all platforms
     mock_mode: Tests specifically for mock mode functionality
+    forked_required: Tests that require subprocess isolation to prevent ctypes contamination
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
