--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ pytest-cov>=4.0.0
 pytest-mock>=3.10.0
 pytest-xdist>=3.0.0  # for parallel test execution
 pytest-timeout>=2.1.0  # for handling long-running tests
+pytest-forked>=1.6.0  # for subprocess isolation to prevent ctypes contamination
 
 # Documentation dependencies
 doxypypy>=0.8.8.6  # for Python docstring processing with Doxygen
