--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ addopts =
     -v
     --tb=short
     --strict-markers
+    --forked
 markers =
     unit: Unit tests for individual components (work with mocks)
     integration: Integration tests with Helios C++ library (require native libraries)
@@ -19,6 +20,7 @@ markers =
     cross_platform: Tests that work across all platforms
     mock_mode: Tests specifically for mock mode functionality
     forked_required: Tests that require subprocess isolation to prevent ctypes contamination
+    requires_gpu: Tests that require actual GPU hardware and drivers at runtime
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
