--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,7 +41,14 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y doxygen graphviz
+        sudo apt-get install -y graphviz wget
+
+        # Install Doxygen 1.13.2 from source to match local build
+        # Different Doxygen versions generate different anchor hashes, breaking search links
+        wget https://www.doxygen.nl/files/doxygen-1.13.2.linux.bin.tar.gz
+        tar -xzf doxygen-1.13.2.linux.bin.tar.gz
+        sudo cp doxygen-1.13.2/bin/doxygen /usr/local/bin/
+        sudo chmod +x /usr/local/bin/doxygen
         
     - name: Install Python dependencies
       run: |
