--- a/pyhelios_build/CMakeLists.txt
+++ b/pyhelios_build/CMakeLists.txt
@@ -84,6 +84,10 @@ if("stomatalconductance" IN_LIST PLUGINS)
     list(APPEND PYHELIOS_WRAPPER_SOURCES ../native/src/pyhelios_wrapper_stomatalconductance.cpp)
 endif()
 
+if("boundarylayerconductance" IN_LIST PLUGINS)
+    list(APPEND PYHELIOS_WRAPPER_SOURCES ../native/src/pyhelios_wrapper_boundarylayerconductance.cpp)
+endif()
+
 if("plantarchitecture" IN_LIST PLUGINS)
     list(APPEND PYHELIOS_WRAPPER_SOURCES ../native/src/pyhelios_wrapper_plantarchitecture.cpp)
 endif()
@@ -162,6 +166,14 @@ if(NOT DEFINED ENV{CIBUILDWHEEL})
     if("stomatalconductance" IN_LIST PLUGINS)
         target_include_directories(pyhelios_interface PRIVATE
             ${BASE_DIRECTORY}/plugins/stomatalconductance/include
+        )
+    endif()
+endif()
+
+if(NOT DEFINED ENV{CIBUILDWHEEL})
+    if("boundarylayerconductance" IN_LIST PLUGINS)
+        target_include_directories(pyhelios_interface PRIVATE
+            ${BASE_DIRECTORY}/plugins/boundarylayerconductance/include
         )
     endif()
 endif()
@@ -265,6 +277,12 @@ endif()
 if("stomatalconductance" IN_LIST PLUGINS)
     target_include_directories(pyhelios_shared PRIVATE
         ${BASE_DIRECTORY}/plugins/stomatalconductance/include
+    )
+endif()
+
+if("boundarylayerconductance" IN_LIST PLUGINS)
+    target_include_directories(pyhelios_shared PRIVATE
+        ${BASE_DIRECTORY}/plugins/boundarylayerconductance/include
     )
 endif()
 
