--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "helios-core"]
 	path = helios-core
-	url = https://github.com/PlantSimulationLab/Helios.git
+	url = https://github.com/bbrangeo/Helios3D.git
